plugins {
	id 'java'
	id 'org.springframework.boot' version '3.4.4'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.example.chat'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	// Spring Boot
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'		// Spring Data Jpa
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'		// Thymeleaf
	implementation 'nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect' 			// Thymeleaf Layout
	implementation 'org.springframework.boot:spring-boot-starter-validation'	// Validation
	implementation 'org.springframework.boot:spring-boot-starter-web'			// Web
	implementation 'org.springframework.boot:spring-boot-starter-websocket' 	// Web Socket
	implementation 'org.springframework.kafka:spring-kafka'						// Kafka

	// Lombok
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'

	// Dev Tools
	developmentOnly 'org.springframework.boot:spring-boot-devtools'

	// Database (H2, MySQL)
	runtimeOnly 'com.h2database:h2'
	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'	// MongoDB
	runtimeOnly 'com.mysql:mysql-connector-j'

	// MongoDb Reactive
	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb-reactive'
	testImplementation 'io.projectreactor:reactor-test'

	// Spring Boot Test
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

	// Lombok Test
	testCompileOnly 'org.projectlombok:lombok'
	testAnnotationProcessor 'org.projectlombok:lombok'

	// Kafka Test
	testImplementation 'org.springframework.kafka:spring-kafka-test'

	// QueryDSL
	implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
	annotationProcessor "com.querydsl:querydsl-apt:${dependencyManagement.importedProperties['querydsl.version']}:jakarta"
	annotationProcessor "jakarta.annotation:jakarta.annotation-api"
	annotationProcessor "jakarta.persistence:jakarta.persistence-api"
}

tasks.named('test') {
	useJUnitPlatform()
}
